fixes sign out link z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,8 @@
 body {
  background-color: #85b9dd !important
 }
+
+.nav-stuff {
+  z-index: 1;
+}
+
